# Astro-Orbit-contracts

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  ISSUES.md  LICENSE  README.md  deny.toml
.github/workflows/: audit.yml  cd.yml  ci.yml  release.yml
contracts/deployment/: Cargo.toml
contracts/deployment/src/: lib.rs  test.rs
contracts/deployment/test_snapshots/test/: test_count.1.json  test_get.1.json  test_multiple_versions.1.json  test_record.1.json
contracts/organization/: Cargo.toml
contracts/organization/src/: lib.rs  test.rs
contracts/organization/test_snapshots/test/: test_archive.1.json  test_get.1.json  test_get_not_found.1.json  test_transfer.1.json  test_transfer_unauthorized.1.json  test_update_metadata.1.json
contracts/permissions/: Cargo.toml
contracts/permissions/src/: lib.rs  test.rs
contracts/permissions/test_snapshots/test/: test_grant_duplicate.1.json  test_has_role.1.json  test_hierarchy.1.json  test_revoke_not_found.1.json  test_revoke_role.1.json
contracts/project/: Cargo.toml
contracts/project/src/: lib.rs  test.rs
contracts/project/test_snapshots/test/: test_archive.1.json  test_get.1.json  test_get_not_found.1.json  test_register.1.json
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  test.rs
contracts/registry/test_snapshots/test/: test_index_and_lookup_deployment.1.json  test_index_and_lookup_org.1.json  test_index_and_lookup_project.1.json  test_lookup_org_not_found.1.json
shared/: Cargo.toml
shared/src/: auth.rs  errors.rs  events.rs  lib.rs  types.rs
