[workspace]
resolver = "2"
members = [
    "contracts/organization",
    "contracts/project",
    "contracts/deployment",
    "contracts/permissions",
    "contracts/registry",
    "shared",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Astro-Orbit/Astro-Orbit-contracts"
homepage = "https://astro-orbit.dev"

[workspace.dependencies]
soroban-sdk = "27.0.0"

[patch.crates-io]
ed25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", tag = "ed25519-2.2.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
opt-level = 0
debug = true
