[package]
name = "astro-orbit-permissions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true
astro-orbit-shared = { path = "../../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
